--- a/src/components/forms/SignUp.css
+++ b/src/components/forms/SignUp.css
@@ -1,145 +1,171 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+p, div, input {
+  margin: 0;
+  padding: 0;
 }
 
 .signup-page {
-    width: 1920px;
-    height: 1080px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url('../../assets/images/SignUpBg.png') no-repeat center center/cover;
+  width: 1920px;
+  height: 1080px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("../../assets/images/SignUpBg.png") no-repeat center
+    center/cover;
 }
 
 .bg {
-    width: 1920px;
-    height: 1080px;
-    object-fit: cover;
+  width: 1920px;
+  height: 1080px;
+  object-fit: cover;
 }
 
 .signup-box {
-    width: 448px;
-    height: 342px;
-    border-radius: 12px;
-    padding: 24px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    border: 0;
+  width: 448px;
+  height: 342px;
+  border-radius: 12px;
+  padding: 24px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border: 0;
+}
+
+.signup-box.form-error {
+  border: 1px solid #ff0004;
+  box-shadow: 0 0 6px rgba(255, 0, 0, 0.4);
+  height: 361px;
 }
 
 .text-box {
-    width: 182.17px;
-    height: 28px;
-    line-height: 28px;
-    font-size: 19.38px;
-    font-family: 'Segoe UI Symbol', sans-serif;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 182.17px;
+  height: 28px;
+  line-height: 28px;
+  font-size: 19.38px;
+  font-family: "Segoe UI Symbol", sans-serif;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .signup-form {
-    width: 400px;
-    height: 214px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
+  width: 400px;
+  height: 214px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+
+.signup-form.form-error {
+  height: 239px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 .signup-footer {
-    width: 193.93px;
-    height: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  width: 193.93px;
+  height: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-input {
-    width: 400px;
-    height: 42px;
-    border: 1px solid #E5E7EB;
-    border-radius: 4px;
-    padding: 11px 14px 12px 9px;
+  width: 400px;
+  height: 42px;
+  border: 1px solid #e5e7eb;
+  border-radius: 4px;
+  padding: 11px 14px 12px 9px;
 }
 
 .form-input.error {
-    width: 400px;
-    height: 42px;
-    border: 1px solid #FF0004;
-    border-radius: 4px;
-    padding: 11px 14px 12px 9px;
-    position: relative;
+  width: 400px;
+  height: 42px;
+  border: 1px solid #ff0004;
+  border-radius: 4px;
+  padding: 11px 14px 12px 9px;
+  position: relative;
 }
 
 .form-input::placeholder {
-    color: #9CA3AF;
-    font-size: 15.38px;
-    font-family: "Segoe UI Symbol", sans-serif;
+  color: #9ca3af;
+  font-size: 15.38px;
+  font-family: "Segoe UI Symbol", sans-serif;
 }
 
 .form-input.error::placeholder {
-    color: #FF0004;
-    font-size: 15.38px;
-    font-family: "Segoe UI Symbol", sans-serif;
-    position: absolute;
+  color: #ff0004;
+  font-size: 15.38px;
+  font-family: "Segoe UI Symbol", sans-serif;
+  position: absolute;
 }
 
 .submit-btn {
-    width: 400px;
-    height: 40px;
-    background-color: #16A34A;
-    color: white;
-    padding: 12px 170.46px 12px 170.64px;
-    font-size: 16px;
-    font-family: "Roboto", sans-serif;
-    line-height: 24px;
-    border: 0;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
+  width: 400px;
+  height: 40px;
+  background-color: #16a34a;
+  color: white;
+  padding: 12px 170.46px 12px 170.64px;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  line-height: 24px;
+  border: 0;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
 }
 
 .footer1 {
-    width: 127px;
-    height: 20px;
-    font-family: "Segoe UI Symbol",sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 127px;
+  height: 20px;
+  font-family: "Segoe UI Symbol", sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer2 {
-    width: 68.31px;
-    height: 14px;
-    margin-left: -3px;
-    color: #4F46E5;
-    font-family: "Roboto", sans-serif;
-    line-height: 20px;
-    font-size: 13.78px;
-    display: flex;
-    align-items: center;
+  width: 68.31px;
+  height: 14px;
+  margin-left: -3px;
+  color: #4f46e5;
+  font-family: "Roboto", sans-serif;
+  line-height: 20px;
+  font-size: 13.78px;
+  display: flex;
+  align-items: center;
 }
 
 .footer2:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .error-text {
-    color: #FF0000;
-    font-size: 14px;
-    line-height: auto;
-    font-family: "Robota", sans-serif;
+  width: 100%;
+  height: 25px;
+  color: #ff0000;
+  font-size: 14px;
+  line-height: 25px;
+  font-family: "Roboto", sans-serif;
+  margin-top: 0;
+  margin-bottom: 0;
 }
