--- a/src/components/forms/SignIn.css
+++ b/src/components/forms/SignIn.css
@@ -9,7 +9,7 @@ p, div, input {
   padding: 0;
 }
 
-.signup-page {
+.signin-page {
   width: 1920px;
   height: 1080px;
   display: flex;
@@ -25,9 +25,9 @@ p, div, input {
   object-fit: cover;
 }
 
-.signup-box {
+.signin-box {
   width: 448px;
-  height: 342px;
+  height: 284px;
   border-radius: 12px;
   padding: 24px;
   background-color: white;
@@ -39,17 +39,17 @@ p, div, input {
   border: 0;
 }
 
-.signup-box.form-error {
+.signin-box.form-error {
   border: 1px solid #ff0004;
   box-shadow: 0 0 6px rgba(255, 0, 0, 0.4);
-  height: 361px;
+  height: 333px;
 }
 
 .text-box {
-  width: 182.17px;
+  width: 114.37px;
   height: 28px;
   line-height: 28px;
-  font-size: 19.38px;
+  font-size: 18.28px;
   font-family: "Segoe UI Symbol", sans-serif;
   color: black;
   display: flex;
@@ -58,9 +58,9 @@ p, div, input {
   align-items: center;
 }
 
-.signup-form {
+.signin-form {
   width: 400px;
-  height: 214px;
+  height: 156px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -68,18 +68,18 @@ p, div, input {
   gap: 16px;
 }
 
-.signup-form.form-error {
-  height: 239px;
+.signin-form.form-error {
+  height: 189px;
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  gap: 0px;
+  gap: 8px;
   margin: 0;
   padding: 0;
 }
 
-.signup-footer {
-  width: 193.93px;
+.signin-footer {
+  width: 239.89px;  
   height: 20px;
   display: flex;
   flex-direction: row;
@@ -87,7 +87,7 @@ p, div, input {
   align-items: center;
 }
 
-.form-input {
+.form-input-in {
   width: 400px;
   height: 42px;
   border: 1px solid #e5e7eb;
@@ -95,7 +95,7 @@ p, div, input {
   padding: 11px 14px 12px 9px;
 }
 
-.form-input.error {
+.form-input-in.error {
   width: 400px;
   height: 42px;
   border: 1px solid #ff0004;
@@ -104,36 +104,37 @@ p, div, input {
   position: relative;
 }
 
-.form-input::placeholder {
+.form-input-in::placeholder {
   color: #9ca3af;
   font-size: 15.38px;
   font-family: "Segoe UI Symbol", sans-serif;
 }
 
-.form-input.error::placeholder {
+.form-input-in.error::placeholder {
   color: #ff0004;
   font-size: 15.38px;
   font-family: "Segoe UI Symbol", sans-serif;
   position: absolute;
 }
 
-.submit-btn {
+.submit-btn-in {
   width: 400px;
   height: 40px;
-  background-color: #16a34a;
+  background-color: #4F46E5;
   color: white;
-  padding: 12px 170.46px 12px 170.64px;
-  font-size: 16px;
+  padding: 12px 160.77px 12px 160.95px;
+  font-size: 15.75px;
   font-family: "Roboto", sans-serif;
   line-height: 24px;
   border: 0;
   border-radius: 4px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
-.footer1 {
-  width: 127px;
+.footer3 {
+  width: 155px;
   height: 20px;
   font-family: "Segoe UI Symbol", sans-serif;
   font-size: 14px;
@@ -143,30 +144,31 @@ p, div, input {
   align-items: center;
 }
 
-.footer2 {
-  width: 68.31px;
+.footer4 {
+  width: 85.08px;
   height: 14px;
-  margin-left: -3px;
+  margin-left: -0.16px;
   color: #4f46e5;
   font-family: "Roboto", sans-serif;
   line-height: 20px;
   font-size: 13.78px;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
-.footer2:hover {
+.footer4:hover {
   cursor: pointer;
 }
 
-.error-text {
+.error-text-in {
   width: 100%;
-  height: 25px;
+  height: 24px;
   color: #ff0000;
   font-size: 14px;
-  line-height: 25px;
+  line-height: 24px;
   font-family: "Roboto", sans-serif;
-  margin-top: 0;
+  margin-top: -8px;
   margin-bottom: 0;
 }
 
