--- a/src/pages/admin/AdminPage.css
+++ b/src/pages/admin/AdminPage.css
@@ -40,3 +40,33 @@
     transform: translateY(-50%);
     pointer-events: none;
 }
+
+.category-container {
+    width: 1400px !important;
+    height: 840px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 0; 
+    padding-top: 98px;
+}
+
+.category-utils {
+    width: 100%;
+    height: 46px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.add-category-btn {
+    width: 155px;
+    height: 46px;
+    background-color: #4338CA;
+    color: white;
+    border-radius: 6px;
+    font-size: 17px;
+    line-height: 22px;
+    font-family: "Inter",sans-serif;
+    border: 0;
+}
