--- a/src/components/common/FinancialSummary.css
+++ b/src/components/common/FinancialSummary.css
@@ -95,6 +95,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    text-align: center;
     line-height: 24px;
     font-size: 19px;
+    padding-right: 20px;
 }
